--- a/README.Rmd
+++ b/README.Rmd
@@ -64,13 +64,30 @@ Then call:
 ```{r csv-example}
 library(contactparser)
 csv_file <- system.file(package = "contactparser", "testdata", "example.csv")
-parse_contact_table(csv_file)
+parsed <- parse_contact_table(csv_file)
+parsed
 ```
 
 You can also save the webpage as an html file and parse the contact table from the html:
 ```{r html-example}
 library(contactparser)
 html_file <- system.file(package = "contactparser", "testdata", "example.html")
-parse_contact_table(html_file)
+parsed <- parse_contact_table(html_file)
+parsed
 ```
 
+Once you've parsed the file, you can easily filter to specific types of contacts using `dplyr` functions:
+```{r filter-example}
+library(dplyr, quietly = TRUE)
+
+# Just PIs:
+pis <- parsed %>%
+  filter(contact_type %in% c("pi", "co_pi"))
+pis
+```
+
+Then you can create a string of emails that you can cut and paste into your email client:
+```{r email-example}
+unique_pi_emails <- unique(pis$email)
+cat(paste(unique_pi_emails, collapse = ", "))
+```
