Revert "Add badges for the current branch to the README"
This method of showing the current branch in the readme isn't
working well with merging pull requests on github; it is showing
the badge for the merged branch instead of the badge for the
branch it was merged into because the README file is not
automatically re-rendered. Revert the change and think about if
there's a way to show the current branch more robustly in the
future.

This reverts commit b74148ee1814ddf88d5574c9a8150b3821d0d435.

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,8 +4,6 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-# contactparser
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -15,32 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
+# contactparser
 
 <!-- badges: start -->
-```{r current-branch-badge, results = "asis", echo = FALSE, warning = FALSE}
-.get_badge_string <- function(branch) {
-  travis_url <- "https://travis-ci.org/UW-GAC/contactparser"
-  paste0(
-    sprintf("[![Travis build status](%s.svg?branch=%s)]", travis_url, branch),
-    sprintf("(%s)", travis_url)
-  )
-}
-
-current_branch <- system("git rev-parse --abbrev-ref HEAD", intern = TRUE)
-df <- data.frame(
-  branch = union("master", current_branch)
-)
-
-df$badges <- sapply(df$branch, .get_badge_string)
-df$branch <- sprintf("**%s**", df$branch)
-names(df) <- c("Branch", "Build status")
-df %>% 
-  knitr::kable(format = "markdown")
-```
-
+[![Travis build status](https://travis-ci.org/UW-GAC/contactparser.svg?branch=master)](https://travis-ci.org/UW-GAC/contactparser)
 <!-- badges: end -->
-
-## Description
 
 The contactparser package was designed to parse and reformat the [Contacts table](https://www.nhlbiwgs.org/contact-filter) on the TOPMed website.
 
