--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 # contactparser
 
+Test addition
+
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.org/UW-GAC/contactparser.svg?branch=master)](https://travis-ci.org/UW-GAC/contactparser)
 [![Codecov test coverage](https://codecov.io/gh/UW-GAC/contactparser/branch/master/graph/badge.svg)](https://codecov.io/gh/UW-GAC/contactparser?branch=master)
